== Version 0.3.?? (tzdata v2009e) - ???????????

* Updated to tzdata version 2009e
  (http://article.gmane.org/gmane.comp.time.tz/2650).


== Version 0.3.12 (tzdata v2008i) - 12-Nov-2008

* Updated to tzdata version 2008i
  (http://article.gmane.org/gmane.comp.time.tz/2440).


== Version 0.3.11 (tzdata v2008g) - 7-Oct-2008

* Updated to tzdata version 2008g
  (http://article.gmane.org/gmane.comp.time.tz/2335).
* Support Ruby 1.9.0-5. Rational.new! has now been removed in Ruby 1.9.
  Only use Rational.new! if it is available (it is preferable in Ruby 1.8
  for performance reasons). Thanks to Jeremy Kemper and Pratik Naik for
  reporting this. Closes #22312.
* Apply a patch from Pratik Naik to replace assert calls that have been
  deprecated in the Ruby svn trunk. Closes #22308.


== Version 0.3.10 (tzdata v2008f) - 16-Sep-2008

* Updated to tzdata version 2008f
  (http://article.gmane.org/gmane.comp.time.tz/2293).


== Version 0.3.9 (tzdata v2008c) - 27-May-2008

* Updated to tzdata version 2008c
  (http://article.gmane.org/gmane.comp.time.tz/2183).
* Support loading timezone data in the latest trunk versions of Ruby 1.9.
  Rational.new! is now private, so call it using Rational.send :new! instead.
  Thanks to Jeremy Kemper and Pratik Naik for spotting this. Closes #19184.
* Prevent warnings from being output when running Ruby with the -v or -w
  command line options. Thanks to Paul McMahon for the patch. Closes #19719.


== Version 0.3.8 (tzdata v2008b) - 24-Mar-2008

* Updated to tzdata version 2008b
  (http://article.gmane.org/gmane.comp.time.tz/2149).
* Support loading timezone data in Ruby 1.9.0. Use DateTime.new! if it is
  available instead of DateTime.new0 when constructing transition times.
  DateTime.new! was added in Ruby 1.8.6. DateTime.new0 was removed in
  Ruby 1.9.0. Thanks to Joshua Peek for reporting this. Closes #17606.
* Modify some of the equality test cases to cope with the differences
  between Ruby 1.8.6 and Ruby 1.9.0.

